# PXVM

./: .gitignore  CMakeLists.txt
core/header/data/: Data.hpp  DataArchitecture.hpp  Memory.hpp  MemoryContext.hpp  Register.hpp  Stack.hpp
core/header/exception/: BaseException.hpp  InvalidCharValueException.hpp  InvalidOperandException.hpp  MemoryNotExistVariable.hpp  NoEnoughValuesOnStackException.hpp  NotExistsRegisterException.hpp  NullPointerException.hpp  RegisterIndexOutOfBoundException.hpp
core/header/instruction/: Instruction.hpp
core/header/parser/: FileParserService.hpp
core/header/section/: Section.hpp  SectionList.hpp
core/header/vm/: VM.hpp
core/source/: main.cpp
core/source/data/: Data.cpp  Memory.cpp  MemoryContext.cpp  Register.cpp  Stack.cpp
core/source/instruction/: Instruction.cpp
core/source/parser/: FileParserService.cpp
core/source/section/: Section.cpp  SectionList.cpp
core/source/vm/: VM.cpp
